# Intention-Ally

./: .env.local  .env.local.example  .gitignore  .replit  README.md  app-server.js  app.py  config.py  deploy.html  express-server.js  html-server.js  html-test-server.js  index.html  main.py  minimal-server.js  minimal_test.py  next-app-server.js  next-dev.js  next-server.js  next.config.js  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.nix  server.js  simple-html-server.js  simple-server.js  simple-test.html  tailwind.config.js  test-accessibility.html  test-page.html  test-server.js  test_minimal.py  test_server.py  test_streamlit.py
.next/: build-manifest.json  react-loadable-manifest.json  trace
.streamlit/: config.toml
app/: globals.css  layout.tsx  page.tsx
attached_assets/: Intentional Technical Product Requirements Document.docx  Pasted--Fixed-links-with-specific-page-paths-search-for-Next-js-app-Updated-FastAPI-link-to-point-to-1742723941259.txt  Pasted--keyword-carbon-insetting-results-title-What-is-Carbon-insetting-Greener-logistics-start-1741786270994.txt  Pasted-1-Overview-1-1-Product-Summary-Intention-Ally-is-a-semantic-search-and-clustering-tool-that-organ-1741784065180.txt  Pasted-Debug-Search-Results-Data-0-keyword-carbon-insetting-results-0-title-What--1741786080089.txt  Pasted-Debug-Search-Results-Structure-First-search-result-entry-keyword-carbon-insetting-r-1741787053840.txt  Pasted-Debug-Search-Results-Structure-keyword-carbon-insetting-results-0-title-What--1741786814106.txt  allie-algorithm-part1.md  index.jsx  (+16 more)
(+125 files in other folders)
